--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,25 @@
 <div class="container">
   <app-navi></app-navi>
-  <app-rental></app-rental>
-  <app-car></app-car>
-  <app-brand></app-brand>
-  <app-color></app-color>
+
+  <div class="row">
+
+    <div class="col-md-3">
+      <app-brand></app-brand>
+    </div>
+
+    <div class="col-md-9">
+      <app-car-detail></app-car-detail>
+      <router-outlet></router-outlet>
+      <app-rental></app-rental>
+    </div>
+
+  </div>
+
+  <div class="row">
+    <app-color class="col-md-3"></app-color>
+  </div>
+
   <app-customer></app-customer>
 
-  <router-outlet></router-outlet>
+  
 </div>
