--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,4 +1,11 @@
 <ul class="list-group">
-  <li *ngFor="let brand of brands" class="list-group-item">{{ brand.name }}</li>
+  <li (click)="setCurrentBrand(brand)"
+  routerLink="/cars/brand/{{brand.id}}"
+  *ngFor="let brand of brands" [class]="getCurrentBrandClass(brand)">{{ brand.name }}</li>
 </ul>
 <br />
+
+<!-- <select class="form-select" aria-label="Default select example">
+  <option value="0">One</option>
+  <option *ngFor="let brand of brands" routerLink="cars/brand/{{brand.id}}" value={{brand.id}}>{{brand.name}}</option>
+</select> -->
