--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,14 +1,15 @@
-<table class="table">
+<table class="table" >
   <thead>
     <th>Car Id</th>
-    <th>Brand Id</th>
-    <th>Color Id</th>
+    <th>BrandId</th>
+    <th>ColorId</th>
     <th>Car Name</th>
-    <th>Model Year</th>
+    <th >Model Year</th>
     <th>Daily Price</th>
     <th>Description</th>
   </thead>
-  <tr *ngFor="let car of cars">
+  <tbody>
+  <tr routerLink="/cars/car-detail/{{car.id}}" *ngFor="let car of cars" (click)="setCurrentCar(car)" [class]="getCurrentCarClass(car)">
     <td>{{ car.id }}</td>
     <td>{{ car.brandId }}</td>
     <td>{{ car.colorId }}</td>
@@ -17,4 +18,7 @@
     <td>{{ car.dailyPrice }}</td>
     <td>{{ car.description }}</td>
   </tr>
+</tbody>
 </table>
+
+
